--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -58,8 +58,77 @@
     text-transform: capitalize;
 
     border: none;
-    uoytline: none;
+    outline: none;
     padding: 0.5rem 1rem;
     margin: 0 1rem;
     cursor: pointer;
 }
+
+.synapsehub__navbar-menu {
+    margin-left: 1rem;
+
+    display: none;
+    position: relative;
+}
+
+.synapsehub__navbar-menu svg {
+    cursor: pointer;
+}
+
+.synapsehub__navbar-menu_container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+
+    text-align: end;
+    background-color: var(--color-footer);
+    padding: 2rem;
+    position: absolute;
+    top: 40px;
+    right: 0;
+    margin-top: 1rem;
+    min-width: 210px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.synapsehub__navbar-menu_container p {
+    margin: 1rem 0;
+}
+
+.synapsehub__navbar-menu_container-links-sign {
+    display: none;
+}
+
+@media screen and  (max-width: 1050px) {
+    .synapsehub__navbar-links_container {
+        display: none;
+    }
+
+    .synapsehub__navbar-menu {
+        display: flex;
+    }
+
+};
+@media screen and  (max-width: 700px) {
+    .synapsehub__navbar {
+        padding: 2rem 4rem;
+    }
+
+};
+@media screen and  (max-width: 550px) {
+    .synapsehub__navbar {
+        padding: 2rem;
+    }
+
+    .synapsehub__navbar-sign {
+        display: none;
+    }
+
+    .synapsehub__navbar-menu_container-links-sign {
+        display: block;
+    }
+
+};
+    
