--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,6 +1,9 @@
 .synapsehub__header {
-    display: flex !important;
+    display: flex;
+}
 
+#home {
+    display: flex;
 }
 
 .synapsehub__header-content {
@@ -10,21 +13,21 @@
     align-items: flex-start;
     flex-direction: column;
 
-    margin-right: 5rem;
+    margin-right: 1rem;
 }
 
 .synapsehub__header-content h1 {
     font-family: var(--font-family);
     font-weight: 800;
-    font-size: 62px;
-    line-height: 75px;
+    font-size: 54px;
+    line-height: 68px;
     letter-spacing: -0.04rem;
 }
 
 .synapsehub__header-content p {
     font-family: var(--font-family);
-    font-size: 20px;
-    line-height: 27px;
+    font-size: 18px;
+    line-height: 24px;
     font-weight: 400;
 
     color: var(--color-text);
@@ -41,10 +44,10 @@
 .synapsehub__header-content__input input {
     flex: 2;
     width: 100%;
-    min-height: 50px;
+    min-height: 40px;
     font-family: var(--font-family);
-    font-size: 20px;
-    line-height: 27px;
+    font-size: 18px;
+    line-height: 24px;
     background-color: var(--color-footer);
     border: 2px solid var(--color-footer);
     outline: none;
@@ -56,7 +59,7 @@
 .synapsehub__header-content__input button {
     flex: 0.6;
     width: 100%;
-    min-height: 50px;
+    min-height: 40px;
 
     font-family: var(--font-family);
     font-size: 18px;
@@ -79,7 +82,7 @@
     justify-content: flex-start;
     align-items: center;
 
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 .synapsehub__header-content__people img {
@@ -102,18 +105,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .synapsehub__header-image img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 
 
 @media screen and (max-width: 1050px) {
-    /* .synapsehub__header {
+    .synapsehub__header {
         flex-direction: column;
-    } */
+    }
 
     .synapsehub__header-content {
         margin: 0 0 0 3rem;
