--- a/src/containers/whatsynapsehub/whatsynapsehub.css
+++ b/src/containers/whatsynapsehub/whatsynapsehub.css
@@ -26,11 +26,11 @@
     display: flex;
 }
 
-.synapsehub__what-synapse-hub__feature .synapsehub__what-synapse-hub__features-container__feature {
+.synapsehub__what-synapse-hub__feature .synapsehub__features-container__feature {
     margin: 0;
 }
 
-.synapsehub__what-synapse-hub__feature .synapsehub__what-synapse-hub__features-container__feature-text {
+.synapsehub__what-synapse-hub__feature .synapsehub__features-container__feature-text {
     max-width: 700px ;
 }
 
@@ -45,8 +45,8 @@
 
 .synapsehub__what-synapse-hub__heading h1 {
     font-size: 34px;
-    line-height: 46px;
-    max-width: 520px;
+    line-height: 45px;
+    max-width: 510px;
     font-family: var(--font-family);
     font-weight: 800;
 }
@@ -68,6 +68,17 @@
     margin: 2rem;
 }
 
+.synapsehub__what-synapse-hub__container .synapsehub__features-container__feature {
+    flex: 1;
+    margin: 1rem;
+    min-width: 210px;
+    display: unset;
+    flex-direction: column;
+}
+.synapsehub__what-synapse-hub__container .synapsehub__features-container__feature-text {
+    margin-top: 2rem;
+}
+
 @media screen and (max-width: 850px) {
     .synapsehub__what-synapse-hub__heading {
         flex-direction: column;
@@ -82,16 +93,16 @@
 
 @media screen and (max-width: 650px) {
     /* Customizing feature component as per needs */
-    .synapsehub__what-synapse-hub-feature .gpt3__features-container__feature {
+    .synapsehub__what-synapse-hub-feature .synapsehub__features-container__feature {
         flex-direction: column;
     }
 
     /* Customizing feature component as per needs */
-    .synapsehub__what-synapse-hub-feature .gpt3__features-container__feature-text {
+    .synapsehub__what-synapse-hub__feature .synapsehub__features-container__feature-text {
         margin-top: 0.5rem;
     }
 
-    .synapsehub__what-synapse-hub-heading h1 {
+    .synapsehub__what-synapse-hub__heading h1 {
         font-size: 28px;
         line-height: 40px;
     }
@@ -99,7 +110,7 @@
 
 @media screen and (max-width: 350px) {
     /* Customizing feature component as per needs */
-    .synapsehub__what-synapse-hub__container .gpt3__features-container__feature {
+    .synapsehub__what-synapse-hub__container .synapsehub__features-container__feature {
         margin: 1rem 0;
         min-width: 100%;
     }
