Update CSS styles and fix typos in various components

--- a/src/containers/features/features.css
+++ b/src/containers/features/features.css
@@ -1,4 +1,5 @@
-.synapsehub__features {  
+.synapsehub__features {
+    width: 0%;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
