--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -17,8 +17,9 @@
     margin-right: 2rem;
 }
 .synapsehub__navbar-links_logo img{
-    width: 62px;
-    height: 16.5px;
+    width: 100%;
+    height: 25px;
+    margin-top: 0.25rem;
 }
 
 .synapsehub__navbar-links_container{
